# curio-template

./: Cargo.toml  cargo-generate.toml  readme.md
src/: app.rs  main.rs  ui.rs
src/assets/: mod.rs
src/ui/: menu.rs  mod.rs  widgets.rs
