[package]
name = "{{project-name}}"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.0.1"

[dependencies]
cortex-m-rtic = "1.1.3"
curio-bsp = { git = "https://github.com/dotcypress/curio" }
klaptik = { version = "0.1.0", features = ["st7567"] }
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-halt = "0.2.0"

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
